<resources>
    <string name="app_name">VirMarche</string>
    <string name="app_version_code">1</string>
    <string name="app_version">1.0.0</string>

    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>

    <string name="home_action">Home</string>
    <string name="about_action">About</string>
    <string name="settings_action">Settings</string>
    <string name="logout_action">Logout</string>
    <string name="location_activity">Location</string>

    <string name="offline">Offline</string>
    <string name="offline_msg">Please check your network connection</string>

    <string name="fragment_locate">Current Device Location</string>
    <string name="fragment_location">Track Device</string>

    <string name="new_device">Add New Device</string>
    <string name="device_name">Device Name</string>
    <string name="device_emei">Device IMEI</string>
    <string name="device_sim">Device SIM Number</string>
    <string name="device_model">Device Model</string>
    <string name="device_name_error">Enter Device Name is Required</string>
    <string name="device_imei_error">Enter Device Imei is Required</string>
    <string name="device_sim_error">Enter Device SIM Number is Required</string>
    <string name="device_failed">Failed to add device, try again</string>


    <string name="settings_phone_number">Your Phone Number</string>
    <string name="settings_sms_amount">SMS Amount Cost</string>
    <string name="settings_notification">Enable App Notification</string>

    <string name="current_location_notification_title">Current location: %1$s</string>

    <string name="current_location_notification">You have new update about your device, Tap to know more</string>

    <string name="action_more">More</string>

    <string name="identification_activity">Identification</string>
    <string name="iden_info">About</string>
    <string name="log_tab">Sign in</string>
    <string name="log_tab_firstname">First Name</string>
    <string name="log_tab_lastname">Last Name</string>
    <string name="log_tab_username">Username</string>
    <string name="log_tab_password">Password</string>
    <string name="log_tab_email">Email</string>
    <string name="log_tab_phone">Phone Number</string>
    <string name="reg_tab">Sign up</string>
    <string name="empty_fields">Complete all the necessary fields</string>
    <string name="inc_email">Invalid E-mail address</string>
    <string name="min_pass">password too short, should at least 8 characters</string>
    <string name="not_connect">Failed to sign in</string>
    <string name="not_registred">Failed to sign up</string>
    <string name="inc_phone_format">Incorrect phone number format</string>
    <string name="inc_username_format">Username must be at least 5 characters and number</string>
    <string name="action_settings">Settings</string>

</resources>
